Started with cards

--- a/assets/css/3-modules/_navbar.sass
+++ b/assets/css/3-modules/_navbar.sass
@@ -2,8 +2,9 @@
 	margin-top: 200px
 	.mynav
 		display: flex
-		-webkit-box-pack: justify;
-		justify-content: space-between;
+		-webkit-box-pack: justify
+		justify-content: space-between
+		position: relative
 		.head-logo
 			position: relative
 			height: 200px
@@ -23,7 +24,7 @@
 					transform-origin: bottom center
 				@for $i from 0 through 12
 					li:nth-child(#{$i + 1})
-						transform: rotate(-82deg + (180 / 13 * $i))
+						transform: rotate(-90deg + (180 / 12 * $i))
 		&:hover
 			li
 				animation: turn-em 3000ms ease-in-out infinite
