--- a/assets/css/3-modules/_ribbon.sass
+++ b/assets/css/3-modules/_ribbon.sass
@@ -5,7 +5,7 @@
 	margin-top: 30px
 	position: relative
 	&:before, &:after
-		content: "";
+		content: ' '
 		position: absolute
 		z-index: -3
 		bottom: -30px
@@ -28,7 +28,7 @@
 		font-weight: bold
 		box-shadow: 0px 16px 23px 0px rgba(255,65,54,0.5)
 		&:before, &:after
-			content: "";
+			content: ""
 			position: absolute
 			z-index: -2
 			bottom: -30px
