Before adding contents

--- a/assets/css/1-tools/_vars.sass
+++ b/assets/css/1-tools/_vars.sass
@@ -1,6 +1,10 @@
 //
 // Some Useful color Vars via http://clrs.cc/
 //
+//Theme Colors
+$themered : #750700
+$themeyellow : #f8a219
+$ribboncol: linear-gradient(to bottom, rgba(83,6,1,1) 0%, rgba(255,64,54,1) 52%, rgba(83,6,1,1) 100%)
 
 // Cool
 $aqua:  #7FDBFF
@@ -15,7 +19,7 @@ $lime:  #01FF70
 // Warm
 $yellow:  #FFDC00
 $orange:  #FF851B
-$red:     #FF4136
+$red:     #bd1b11
 $shadowedred: #8c221c
 $fuchsia: #F012BE
 $purple:  #B10DC9
