--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -4,11 +4,11 @@
 // 1 - TOOLS
 //@import '1-tools/bourbon/bourbon'
 @import '1-tools/fonts'
-@import '1-tools/normalize'
 @import '1-tools/vars'
 @import '1-tools/font-awesome/scss/font-awesome.scss'
 @import '1-tools/bootstrap'
 @import '1-tools/bootstraptheme'
+@import '1-tools/normalize'
 
 // 2 - BASICS
 @import '2-basics/body-element'
@@ -20,4 +20,7 @@
 @import '3-modules/ribbon'
 @import '3-modules/navbar'
 @import '3-modules/cards'
+@import '3-modules/popup'
+@import '3-modules/popupcontent'
+@import '3-modules/login'
 // 4 - pages
