--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -1,8 +1,11 @@
+html
+	width: 100%
+	overflow-x: hidden
 body
-  background-color: white
-  font-size: 14px
-  line-height: 1.6
-  font-family: 'Fira Sans', sans-serif
-  color: #666
-  -webkit-font-smoothing: antialiased
-  -webkit-text-size-adjust: 100%
+	background: radial-gradient(ellipse at center, rgba(191,53,28,1) 0%, rgba(83,6,1,1) 100%)
+	font-size: 14px
+	line-height: 1.6
+	font-family: 'Berkshire Swash', cursive
+	color: $themeyellow
+	-webkit-font-smoothing: antialiased
+	-webkit-text-size-adjust: 100%
