--- a/assets/css/3-modules/_popupcontent.sass
+++ b/assets/css/3-modules/_popupcontent.sass
@@ -47,3 +47,12 @@
 				cursor: pointer
 				background: $red
 				color: $themeyellow
+.mypopup .hakkimizda
+	padding: 10px
+	h2
+		width: 350px
+		text-align: center
+		margin: 10px auto
+		color: wheat
+		border-bottom: 2px solid
+		border-radius: 50px
