Added About Page

--- a/assets/css/3-modules/_popupcontent.sass
+++ b/assets/css/3-modules/_popupcontent.sass
@@ -12,6 +12,7 @@
 		text-align: center
 		border-radius: 5px
 		transition: 300ms
+		z-index: 10
 		&:hover
 			cursor: pointer
 			color: $themeyellow
@@ -48,7 +49,7 @@
 				background: $red
 				color: $themeyellow
 .mypopup .hakkimizda
-	padding: 10px
+	padding: 0 50px
 	h2
 		width: 350px
 		text-align: center
@@ -56,3 +57,9 @@
 		color: wheat
 		border-bottom: 2px solid
 		border-radius: 50px
+	p
+		font-size: 16px
+		&.phone
+			font-size: 20px
+	.littit
+		color: white
