--- a/assets/css/1-tools/_normalize.scss
+++ b/assets/css/1-tools/_normalize.scss
@@ -4,9 +4,14 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 body {
+	height: 100%;
+	padding: 0;
   margin: 0;
 }
 
