--- a/assets/css/3-modules/_login.sass
+++ b/assets/css/3-modules/_login.sass
@@ -6,7 +6,7 @@
 		display: flex
 		z-index: 10
 		&>div
-			width: 100px
+			position: relative
 			margin-left: 20px
 			height: 40px
 			line-height: 40px
@@ -15,16 +15,28 @@
 			border: 1px solid
 			background: $red
 			transition: all 300ms
+			padding: 0 20px
+			&.go-out
+				animation: buttonup 500ms ease-in-out forwards
+			&.go-in
+				animation: buttonin 1000ms ease-in-out forwards
+				display: block
 			&>div
-				position: relative
-				right: 100px
-				width: 200px
+				width: 250px
+				position: absolute
+				right: 0
 				padding: 10px
 				visibility: hidden
 				background: $red
 				transition: all 300ms
 				opacity: 0
 				border-radius: 5px
+				h4
+					color: white
+					width: 100px
+					margin: 5px auto
+					border-bottom: 3px solid
+					border-radius: 50px
 				input, textarea
 					width: 100%
 					background: none
@@ -44,12 +56,13 @@
 					border: 1px solid $themeyellow
 					resize: none
 					height: 100px
-				button
+				div.btn
 					color: $themeyellow
 					height: 33px
 					background: $themered
 					border: 1px solid $themeyellow
 					transition: all 300ms
+					margin: 0 10px
 					&:hover
 						color: $themered
 						background: $themeyellow
@@ -61,3 +74,29 @@
 					visibility: visible
 					opacity: 1
 					box-shadow: 10px 10px 22px 0px rgba(0,0,0,0.75)
+		.usercart
+			.my-cart
+				color: $themeyellow
+				list-style: none
+				padding: 0
+				text-align: left;
+				margin-bottom: 0
+				span
+					float: right
+			.total
+				color: $themeyellow
+				text-align: right
+@keyframes buttonup
+	0%
+		opacity: 1
+		transform: translateY(0)
+	100%
+		opacity: 0
+		transform: translateY(-300px)
+@keyframes buttonin
+	0%
+		opacity: 0
+		transform: translateX(100px)
+	100%
+		opacity: 1
+		transform: translateY(0)
