--- a/assets/css/3-modules/_navbar.sass
+++ b/assets/css/3-modules/_navbar.sass
@@ -15,6 +15,10 @@
 				border-radius: 50%
 				background: $themered
 				box-shadow: 0px 0px 34px 4px rgba(0,0,0,0.75)
+				img
+					position: absolute
+					left: 50px
+					top: 75px
 				ul
 					position: relative
 					list-style: none
